<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>issue718</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vscode@todo.todo">vscode</maintainer>
  <license>TODO: License declaration</license>

  <depend>issue718_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
